# Surveil

./: .gitignore  LICENSE  README.md  Surveil.sln
.github/workflows/: dotnet.yml  native-windows.yml  release.yml  windows.yml
Surveil.App/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  README.md  Surveil.App.csproj  app.manifest
Surveil.App.Tests/: CameraFacetServiceTests.cs  CameraTreeProjectorTests.cs  Surveil.App.Tests.csproj
Surveil.App/Controls/: ColumnSplitter.cs  WrapPanel.cs
Surveil.App/Services/: Csv.cs  (+9 more)
Surveil.Core/: BulkConfigurationContracts.cs  BulkConfigurationService.cs  BulkProvisioningService.cs  CameraConfigurationPlanner.cs  CameraScanner.cs  ConfigMigration.cs  ConfigValidator.cs  InventoryComparer.cs  JsonStore.cs  Models.cs  NetworkRanges.cs  OnvifCamera.cs  OnvifConfigurationAdapters.cs  OnvifDeviceClient.cs  OnvifImagingClient.cs  OnvifMedia1Client.cs  OnvifMedia2Client.cs  OnvifSoapTransport.cs  PersistenceContracts.cs  SurveilService.cs  VideoCapabilityIntersection.cs  VideoConfigurationSelector.cs  WsDiscovery.cs
Surveil.Core.Tests/: BulkConfigurationTests.cs  BulkProvisioningTests.cs  CoreTests.cs  NetworkAndInventoryTests.cs  NetworkMapIndexTests.cs  PersistenceTests.cs  Surveil.Core.Tests.csproj  VideoCapabilityIntersectionTests.cs
native-windows/: README.md
src/: buildings.html  buildings.js  index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/seed/: buildings.json
src-tauri/src/: config.rs  discovery.rs  lib.rs  main.rs  store.rs  wsdiscovery.rs
(+48 files in other folders)
